# gears-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codeql.yml  integration.yml
gears_cli/: __init__.py  __main__.py
pytests/: example.py  test_basics.py
