[tool.poetry]
name = "gears-cli"
version = "1.1.2"
description = "RedisGears cli"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Topic :: Database'
]

[tool.poetry.dependencies]
python = "^3.6"
redis = "4.1.3"
click = "^8.0.1"

[tool.poetry.urls]
url = "https://redisai.io"
repository = "https://github.com/RedisGears/gears-cli"

[tool.poetry.scripts]
gears-cli = "gears_cli.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
